# memorybox

./: Dockerfile  README.md  entrypoint.sh  install.sh
example/: docker-compose.yaml
memorybox/: pyproject.toml
memorybox/src/memorybox/: __init__.py  config.py  db.py  fetch_memories.py  login.py  schema.sql  wsgi.py
memorybox/src/memorybox/blueprints/: __init__.py  auth.py  main.py
memorybox/src/memorybox/model/: login_attempt.py  memory.py  user.py
memorybox/src/memorybox/static/: manifest.json
memorybox/src/memorybox/static/js/: print.js
memorybox/src/memorybox/templates/: base.html  index.html  login.html  memory.html  nomemory.html  settings.html
memorybox/src/memorybox/tools/: brute_force_handling.py  fetch_memories.py  init_db.py  misc.py  print_agent.py
pymemorybox/: pyproject.toml
pymemorybox/src/pymemorybox/: __init__.py  __main__.py  config.py  login.py  schema.sql  wsgi.py
pymemorybox/src/pymemorybox/blueprints/: __init__.py  auth.py  main.py
pymemorybox/src/pymemorybox/model/: login_attempt.py  memory.py  user.py
pymemorybox/src/pymemorybox/static/js/: print.js
pymemorybox/src/pymemorybox/templates/: base.html  memory.html  settings.html
pymemorybox/src/pymemorybox/tools/: brute_force_handling.py  fetch_memories.py  init_db.py  print_agent.py  string_processing.py
test/: create_test_user  print_example.sh
tools/repo-server/: README.md  nginx.conf
